--- a/grid.css
+++ b/grid.css
@@ -541,7 +541,7 @@ justify-items: center;
 
                                 /* modelo responsive para novedades */
 
-.responsive{ @media only screen and (min-width: 1px) and (max-width: 425px){
+@media only screen and (min-width: 1px) and (max-width: 425px){
 
     .novedades1{
         display: grid;
@@ -582,4 +582,4 @@ justify-items: center;
         grid-area: card6;
     }
 }
-}
+
